--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
-body {
-  margin: 0;
-}
+@import 'variables';
+@import 'bootstrap/variables';
+@import 'bootstrap/mixins';
+@import 'bootstrap/normalize';
+@import 'bootstrap/scaffolding';
+@import 'bootstrap/grid';
+@import 'bootstrap/type';
