--- a/src/partials/aside.hbs
+++ b/src/partials/aside.hbs
@@ -1,4 +1,14 @@
-<h1>Nic Aitch</h1>
-<span class="h3 text-muted">
-  Javscript mostly
-</span>
+<div id="aside">
+  <h1>Nic Aitch</h1>
+  <p class="text-muted lead">
+    Javascript mostly
+  </p>
+
+  <p class="description">
+    I'm a frontend engineer at <a href="https://www.advisory.com/">The Advisory Board Company</a>.
+  </p>
+
+  <nav class="contact">
+    <a href="http://twitter.com/nicinabox">@nicinabox</a>
+  </nav>
+</div>
