--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,7 @@
 $font-family-sans-serif: 'Lato', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-size-base: 16px;
+
+$font-size-h1: 24px;
+
+$gray-dark: #4A4A4A;
+$brand-primary: #FF2851;
