--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,5 +3,12 @@
 @import 'bootstrap/mixins';
 @import 'bootstrap/normalize';
 @import 'bootstrap/scaffolding';
+@import 'bootstrap/utilities';
 @import 'bootstrap/grid';
 @import 'bootstrap/type';
+
+@import 'type';
+@import 'layout';
+@import 'footer';
+@import 'project';
+@import 'aside';
