--- a/src/partials/aside.hbs
+++ b/src/partials/aside.hbs
@@ -1,5 +1,5 @@
 <div id="aside">
-  <h1>Nic Aitch</h1>
+  <h1><a href="/">Nic Aitch</a></h1>
   <p class="text-muted lead">
     Javascript mostly
   </p>
