--- a/src/partials/aside.hbs
+++ b/src/partials/aside.hbs
@@ -1,5 +1,7 @@
 <div id="aside">
-  <img class="avatar" src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=100" alt="">
+  <a href="/">
+    <img class="avatar" src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=100" alt="">
+  </a>
 
   <h1><a href="/">Nic Aitch</a></h1>
   <p class="text-muted lead">
