Better support retina displays

--- a/src/partials/aside.hbs
+++ b/src/partials/aside.hbs
@@ -1,6 +1,10 @@
 <div id="aside">
   <a href="/">
-    <img class="avatar" src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=100" alt="">
+    <img class="avatar"
+      src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=200"
+      width="100"
+      height="100"
+      alt="">
   </a>
 
   <h1><a href="/">Nic Aitch</a></h1>
