Add last build date to footer

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,5 +1,5 @@
 <div id="footer">
   <p class="text-muted">
-    Curious how this site was made? <a href="https://github.com/nicinabox/nicinabox">Check out the source.</a>
+    Last build: {{lastBuild}}. Curious how this site was made? <a href="https://github.com/nicinabox/nicinabox">Check out the source.</a>
   </p>
 </div>
