--- a/src/partials/project.hbs
+++ b/src/partials/project.hbs
@@ -1,6 +1,21 @@
-{{#link_to this className="project"}}
-  <h4 class="title">{{project_name this}}</h4>
-  <p class="text-muted">
-    {{description}}
-  </p>
-{{/link_to}}
+<div class="project">
+  <div class="actions">
+    <div class="title text-muted">
+      {{project_name this}}
+    </div>
+    <nav>
+      <a href="{{url}}">Code</a>
+
+      {{#if homepage}}
+        <a href="{{homepage}}">Homepage</a>
+      {{/if}}
+    </nav>
+  </div>
+
+  {{#link_to this className="details"}}
+    <h4 class="title">{{project_name this}}</h4>
+    <p class="text-muted">
+      {{description}}
+    </p>
+  {{/link_to}}
+</div>
