Add project detail toggle with mobile support

--- a/src/partials/project_group.hbs
+++ b/src/partials/project_group.hbs
@@ -10,7 +10,7 @@
 
     <div class="row">
       {{#each set}}
-        <div class="col-sm-4">
+        <div class="col-sm-4 project-container">
           {{> project}}
         </div>
       {{/each}}
