--- a/src/partials/project.hbs
+++ b/src/partials/project.hbs
@@ -1,8 +1,8 @@
 <div class="project">
   <div class="actions">
-    <div class="title text-muted">
+    <h4 class="title text-muted">
       {{project_name this}}
-    </div>
+    </h4>
     <nav>
       <a href="{{url}}">Code</a>
 
