--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -19,6 +19,15 @@
   }
 }
 
+.project-container {
+  &.active {
+    .actions {
+      height: 100%;
+      border-color: $brand-primary;
+    }
+  }
+}
+
 .project {
   border-bottom: none;
   height: 107px;
@@ -35,11 +44,7 @@
 
     .actions {
       border-color: $brand-primary;
-      height: 100%;
     }
-  }
-
-  &.active {
   }
 
   .details {
@@ -57,6 +62,7 @@
     top: 0;
     left: 0;
     overflow: hidden;
+    z-index: 1;
     width: 100%;
     background: #fff;
     position: absolute;
@@ -64,7 +70,8 @@
     transition: height 250ms ease;
 
     .title {
-      margin: 10px 0;
+      margin: 15px 0;
+      font-size: 18px;
     }
 
     a {
@@ -87,5 +94,17 @@
     text-overflow: ellipsis;
     width: 100%;
     margin-bottom: 4px;
+  }
+
+  @media screen and (max-width: $container-sm) {
+    .actions {
+      text-align: left;
+
+      .title {
+        margin-top: 10px;
+        border-top: 1px solid transparent;
+        font-size: 20px;
+      }
+    }
   }
 }
