--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700,900);
+
 @import 'variables';
 @import 'bootstrap/variables';
 @import 'bootstrap/mixins';
