--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -2,7 +2,7 @@
   margin-bottom: 100px;
 
   h1 {
-    margin-bottom: 0;
+    margin-bottom: 28px;
 
     .description {
       display: inline-block;
@@ -22,28 +22,33 @@
 .project-container {
   &.active {
     .actions {
-      height: 100%;
-      border-color: $brand-primary;
+      height: 101%;
+      border-bottom-color: $brand-primary;
+      z-index: 2;
     }
   }
 }
 
 .project {
   border-bottom: none;
-  height: 107px;
-  margin-top: 28px;
+  height: 132px;
   text-decoration: none;
   display: block;
   position: relative;
+  padding-bottom: 28px;
 
   &:hover {
     .details {
       text-decoration: none;
       color: $brand-primary;
+
+      p {
+        color: $gray-dark;
+      }
     }
 
     .actions {
-      border-color: $brand-primary;
+      border-bottom-color: $brand-primary;
     }
   }
 
@@ -54,10 +59,15 @@
     background: #fff;
     border: none;
     color: $gray-dark;
+
+    p {
+      color: $gray-light;
+    }
   }
 
   .actions {
     border-bottom: 1px solid #4A4A4A;
+    box-shadow: 0 1px 0 0 #ccc inset;
     height: 0;
     top: 0;
     left: 0;
@@ -69,13 +79,12 @@
     text-align: center;
     transition: height 250ms ease;
 
-    .title {
-      margin: 15px 0;
-      font-size: 18px;
+    nav {
+      margin: 49px 0;
     }
 
     a {
-      border: none;
+      border: 1px solid lighten($brand-primary, 30%);
       padding: 4px 8px;
       font-size: 18px;
       border-radius: 3px;
@@ -83,6 +92,7 @@
 
       &:hover {
         color: #fff;
+        border-color: transparent;
         background: $brand-primary;
       }
     }
