Refactor build system

--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -1,5 +1,5 @@
 <div id="footer">
   <p class="text-muted">
-    Last build: {{lastBuild}}. Curious how this site was made? <a href="https://github.com/nicinabox/nicinabox">Check out the source.</a>
+    Built on <strong>{{format_date lastBuild}}</strong>. Curious how this site was made? <a href="https://github.com/nicinabox/nicinabox">Check out the source.</a>
   </p>
 </div>
