Update section title

--- a/src/index.html.hbs
+++ b/src/index.html.hbs
@@ -22,7 +22,7 @@
           set=current_projects }}
 
         {{> project_group
-          title='Recent Contributions'
+          title='Forks & Contributions'
           description='Last 12 months'
           set=recent_contributions }}
 
