--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -97,6 +97,10 @@
       border-radius: 3px;
       display: inline-block;
 
+      + a {
+        margin-left: 5px;
+      }
+
       &:hover {
         color: #fff;
         border-color: transparent;
