Fix line height

--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -115,6 +115,7 @@
     text-overflow: ellipsis;
     width: 100%;
     margin-bottom: 4px;
+    line-height: 1.2;
   }
 
   @media screen and (max-width: $container-sm) {
