--- a/src/_includes/aside.hbs
+++ b/src/_includes/aside.hbs
@@ -1,27 +1,20 @@
 <div id="aside">
-      <a href="/">
-        <img className="avatar"
-          src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=200"
-          width="100"
-          height="100"
-          alt="" />
-      </a>
+    <a href="/">
+        <img className="avatar" src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=200"
+            width="100" height="100" alt="" />
+    </a>
 
-      <h1><a href="/">Nic Haynes</a></h1>
-      <p className="text-muted lead">
-        UI Engineer
-      </p>
+    <p className="lead">
+        <strong>Hey!</strong> I'm Nic. These are my side projects, pulled daily from Github activity.
+    </p>
 
-      <p className="description">
-        I work on internal tools at Lyft.
-      </p>
-      <p className="description">
-        In my spare time, I'm building mechanical keyboards, doing home renovations, and riding motorcycles.
-      </p>
+    <nav className="contact">
+        <a href="mailto:im.nic@hey.com">im.nic@hey.com</a>
+    </nav>
 
-      <nav className="contact">
+    <nav className="contact">
         <a href="http://github.com/nicinabox">Github</a>
         <span> • </span>
         <a href="http://twitter.com/nicinabox">Twitter</a>
-      </nav>
-    </div>
+    </nav>
+</div>
