--- a/src/_includes/app.hbs
+++ b/src/_includes/app.hbs
@@ -1,15 +1,15 @@
-<div className="app">
-    <a href="{{appUrl}}" className="details">
-        <div className="icon">
+<div class="app">
+    <a href="{{appUrl}}" class="details">
+        <div class="icon">
             {{#if icon}}
-                <div className="icon-placeholder" />
+                <div class="icon-placeholder"></div>
             {{/if}}
             {{#unless icon}}
-                <div className="icon-placeholder" />
+                <div class="icon-placeholder"></div>
             {{/unless}}
         </div>
 
-        <h4 className="title">
+        <h4 class="title">
             {{name}}
         </h4>
     </a>
