--- a/src/_includes/aside.hbs
+++ b/src/_includes/aside.hbs
@@ -1,20 +1,20 @@
-<div id="aside">
+<aside id="aside">
     <a href="/">
-        <img className="avatar" src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=200"
+        <img class="avatar" src="http://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=200"
             width="100" height="100" alt="" />
     </a>
 
-    <p className="lead">
+    <p class="lead">
         <strong>Hey!</strong> I'm Nic. These are my side projects, pulled daily from Github activity.
     </p>
 
-    <nav className="contact">
+    <nav class="contact">
         <a href="mailto:im.nic@hey.com">im.nic@hey.com</a>
     </nav>
 
-    <nav className="contact">
+    <nav class="contact">
         <a href="http://github.com/nicinabox">Github</a>
         <span> • </span>
         <a href="http://twitter.com/nicinabox">Twitter</a>
     </nav>
-</div>
+</aside>
