--- a/src/_includes/footer.hbs
+++ b/src/_includes/footer.hbs
@@ -1,5 +1,5 @@
 <footer id="footer">
-    <p className="text-muted">
+    <p class="text-muted">
         Compiled on <strong>{{site.lastBuild}}</strong>.
         <a href="https://github.com/nicinabox/nicinabox">View Source</a>
     </p>
