--- a/src/_includes/aside.hbs
+++ b/src/_includes/aside.hbs
@@ -5,16 +5,19 @@
     </a>
 
     <p class="lead">
-        <strong>Hey!</strong> I'm Nic. These are my side projects, pulled daily from Github activity.
+        <strong>Hey!</strong> I'm Nic. I do frontend at Lyft. These are my personal projects, pulled daily from Github activity.
+    </p>
+
+    <p>
+        I also like to garden, ride bikes, build keyboards, and tinker with things.
+    </p>
+
+    <p>
+        You can reach me at <a href="mailto:im.nic@hey.com">im.nic@hey.com</a>.
     </p>
 
     <nav class="contact">
-        <a href="mailto:im.nic@hey.com">im.nic@hey.com</a>
-    </nav>
-
-    <nav class="contact">
-        <a href="http://github.com/nicinabox">Github</a>
-        <span> • </span>
-        <a href="http://twitter.com/nicinabox">Twitter</a>
+        <a href="http://github.com/nicinabox">Github →</a>
+        <a href="http://twitter.com/nicinabox">Twitter →</a>
     </nav>
 </aside>
