--- a/src/_includes/main.hbs
+++ b/src/_includes/main.hbs
@@ -1,4 +1,4 @@
-<main class="container">
+<main id="root" class="container">
     <div class="row">
         <div class="col-sm-3">
             {{> aside}}
