--- a/src/styles/_aside.scss
+++ b/src/styles/_aside.scss
@@ -25,7 +25,12 @@
 
     &:hover {
       color: $link-hover-color;
-      border-bottom-color: $link-hover-color;
     }
+  }
+
+  .contact {
+      a {
+          display: block;
+      }
   }
 }
