--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -7,10 +7,8 @@ h1 {
 }
 
 a {
-  border-bottom: 1px solid;
-
+  text-decoration: underline;
   &:hover, &:focus {
-    text-decoration: none;
   }
 }
 
