--- a/src/_includes/app_group.hbs
+++ b/src/_includes/app_group.hbs
@@ -8,7 +8,7 @@
 
     <div class="row">
         {{#each projects}}
-            <div class="col-sm-3 project-container">
+            <div class="col-sm-2 col-xs-3 project-container">
                 {{> app}}
             </div>
         {{/each}}
