--- a/src/_includes/aside.hbs
+++ b/src/_includes/aside.hbs
@@ -17,7 +17,7 @@
     </p>
 
     <nav class="contact">
-        <a href="http://github.com/nicinabox">Github →</a>
-        <a href="http://twitter.com/nicinabox">Twitter →</a>
+        <a class="link-muted" href="http://github.com/nicinabox">Github →</a>
+        <a class="link-muted" href="http://twitter.com/nicinabox">Twitter →</a>
     </nav>
 </aside>
