--- a/src/_includes/project.hbs
+++ b/src/_includes/project.hbs
@@ -2,9 +2,9 @@
     <div class="actions">
         <nav>
             <a href="{{repoUrl}}">Code</a>
-            {{#homepage}}
+            {{#if homepage}}
                 <a href="{{homepage}}">Homepage</a>
-            {{/homepage}}
+            {{/if}}
         </nav>
     </div>
 
