--- a/src/index.hbs
+++ b/src/index.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
     {{> main}}
-    <script src="client.js" />
+    <script src="client.js"></script>
     <script data-goatcounter="https://nicinabox.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
