--- a/src/_includes/footer.hbs
+++ b/src/_includes/footer.hbs
@@ -1,6 +1,6 @@
 <footer id="footer">
     <p class="text-muted">
         Compiled on <strong>{{site.lastBuild}}</strong>.
-        <a href="https://github.com/nicinabox/nicinabox">View Source</a>
+        <a class="link-muted" href="https://github.com/nicinabox/nicinabox">View Source</a>
     </p>
 </footer>
