Fix opening apps

--- a/src/_includes/app_group.hbs
+++ b/src/_includes/app_group.hbs
@@ -1,4 +1,4 @@
-<div class="project-group">
+<div class="app-group">
     <h1>
         {{title}}
         <small class="text-muted description">
@@ -8,7 +8,7 @@
 
     <div class="row">
         {{#each projects}}
-            <div class="col-sm-2 col-xs-4 project-container">
+            <div class="col-sm-2 col-xs-4 app-container">
                 {{> app}}
             </div>
         {{/each}}
