--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,5 +3,7 @@ $font-size-base: 16px;
 
 $font-size-h1: 24px;
 
+$gray-light: #9B9B9B;
 $gray-dark: #4A4A4A;
+$black: #111111;
 $brand-primary: #FF2851;
