--- a/src/_includes/footer.hbs
+++ b/src/_includes/footer.hbs
@@ -1,6 +1,8 @@
 <footer id="footer">
-    <p class="text-muted">
-        Compiled on <strong>{{site.lastBuild}}</strong>.
-        <a class="link-muted" href="https://github.com/nicinabox/nicinabox">View Source</a>
+    <p>
+        <span class="text-muted">Compiled on <strong>{{site.lastBuild}}</strong>.</span>
+    </p>
+    <p>
+        <a class="link-secondary" href="https://github.com/nicinabox/nicinabox">View Source →</a>
     </p>
 </footer>
