--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -1,8 +1,9 @@
-.project-group {
+.project-group, .app-group {
   margin-bottom: 100px;
 
   h1 {
     margin-bottom: 28px;
+    color: $black;
 
     .description {
       display: inline-block;
@@ -58,7 +59,7 @@
     overflow: hidden;
     background: #fff;
     border: none;
-    color: $gray-dark;
+    color: $black;
     outline: 0;
 
     p {
