--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -65,7 +65,7 @@
     p {
       display: block;
       display: -webkit-box;
-      color: $gray-light;
+      color: $gray-mid;
       max-height: $line-height-computed * 3;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
@@ -75,8 +75,8 @@
   }
 
   .actions {
-    border-bottom: 1px solid #4A4A4A;
-    box-shadow: 0 1px 0 0 #ccc inset;
+    border-bottom: 1px solid $gray-dark;
+    box-shadow: 0 1px 0 0 $gray-light inset;
     height: 0;
     top: 0;
     left: 0;
