--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,7 +3,8 @@ $font-size-base: 16px;
 
 $font-size-h1: 24px;
 
-$gray-light: #9B9B9B;
-$gray-dark: #4A4A4A;
-$black: #111111;
+$gray-light: #c7c7d6;
+$gray-mid: #7d7ea1;
+$gray-dark: #333447;
+$black: #15161e;
 $brand-primary: #FF2851;
