--- a/src/index.hbs
+++ b/src/index.hbs
@@ -9,6 +9,19 @@
 <body>
     {{> main}}
     <script src="client.js"></script>
-    <script data-goatcounter="https://nicinabox.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script type="text/javascript">
+        var _gauges = _gauges || [];
+        (function () {
+            var t = document.createElement('script');
+            t.type = 'text/javascript';
+            t.async = true;
+            t.id = 'gauges-tracker';
+            t.setAttribute('data-site-id', '4f83803b613f5d23300000a9');
+            t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+            t.src = 'https://d2fuc4clr7gvcn.cloudfront.net/track.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(t, s);
+        })();
+    </script>
 </body>
 </html>
