--- a/src/_includes/aside.hbs
+++ b/src/_includes/aside.hbs
@@ -5,11 +5,11 @@
     </a>
 
     <p class="lead">
-        <strong>Hey!</strong> I'm Nic. I do frontend at Lyft. These are my personal projects, pulled daily from Github activity.
+        <strong>Hey!</strong> I'm Nic. I'm a senior frontend engineer (formerly at Lyft). These are my personal projects, pulled daily from Github activity.
     </p>
 
     <p>
-        I also like to garden, ride bikes, build keyboards, and tinker with things.
+        I also like to ride bikes, make pizza, build keyboards, and tinker with things.
     </p>
 
     <p>
@@ -18,6 +18,5 @@
 
     <nav class="contact">
         <a class="link-secondary" href="http://github.com/nicinabox">Github →</a>
-        <a class="link-secondary" href="http://twitter.com/nicinabox">Twitter →</a>
     </nav>
 </aside>
