--- a/src/_includes/aside.hbs
+++ b/src/_includes/aside.hbs
@@ -1,15 +1,16 @@
 <aside id="aside">
-    <a href="/">
-        <img class="avatar" src="https://www.gravatar.com/avatar/4da26f5e9ba2c59d01717c8e823df09c?size=200"
-            width="100" height="100" alt="" />
-    </a>
+    <div class="avatar">
+        <a href="/">
+            <img src="/images/avatar.jpeg" alt="avatar" />
+        </a>
+    </div>
 
     <p class="lead">
-        <strong>Hey!</strong> I'm Nic. I'm a senior frontend engineer (formerly at Lyft). These are my personal projects, pulled daily from Github activity.
+        <strong>Hey!</strong> I'm Nic. I'm a senior frontend engineer, formerly at Lyft.
     </p>
 
     <p>
-        I also like to ride bikes, make pizza, build keyboards, and tinker with things.
+        I make pizza, build keyboards, and ride motorbikes around the world.
     </p>
 
     <p>
