--- a/src/_includes/project.hbs
+++ b/src/_includes/project.hbs
@@ -1,9 +1,9 @@
 <div class="project">
     <div class="actions">
         <nav>
-            <a href="{{repoUrl}}">Code</a>
+            <a href="{{repoUrl}}">Source</a>
             {{#if homepage}}
-                <a href="{{homepage}}">Homepage</a>
+                <a href="{{homepage}}">Visit</a>
             {{/if}}
         </nav>
     </div>
