--- a/src/_includes/app.hbs
+++ b/src/_includes/app.hbs
@@ -2,7 +2,7 @@
     <a href="{{appUrl}}" class="details">
         <div class="icon">
             {{#if icon}}
-                <img src="/images/icon-{{name}}.png" alt="{{name}} icon" />
+                <img src="/images/{{icon}}" alt="{{name}} icon" />
             {{/if}}
             {{#unless icon}}
                 <div class="icon-placeholder"></div>
