--- a/src/styles/_aside.scss
+++ b/src/styles/_aside.scss
@@ -2,10 +2,16 @@
   margin-bottom: 50px;
 
   .avatar {
-    @media screen and (max-width: $container-sm) {
-      float: none;
-      margin-left: 0;
-      margin-top: 0;
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    img {
+      width: 100%;
     }
   }
 
